--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
-    "functions": {
-      "api/auth/*": {
-        "maxDuration": 30
-      }
+  "functions": {
+    "api/auth/[...nextauth]": {
+      "maxDuration": 30
     }
   }
+}
